run migration from code

--- a/app.env
+++ b/app.env
@@ -3,3 +3,4 @@ DB_SOURCE=postgresql://root:MyPassword1!@postgres:5432/simple_bank?sslmode=disab
 SERVER_ADDRESS=:8080
 TOKEN_SYMMETRIC_KEY=12345678912345678912345678912345
 ACCESS_TOKEN_DURATION=15m
+MIGRATION_URL=file://db/migration
