--- a/app.env
+++ b/app.env
@@ -1,6 +1,8 @@
 DB_DRIVER=postgres
-DB_SOURCE=postgresql://root:MyPassword1!@postgres:5432/simple_bank?sslmode=disable
-SERVER_ADDRESS=:8080
+DB_SOURCE=secret
+HTTP_SERVER_ADDRESS=:8080
+GRPC_SERVER_ADDRESS=:9090
 TOKEN_SYMMETRIC_KEY=12345678912345678912345678912345
 ACCESS_TOKEN_DURATION=15m
 MIGRATION_URL=file://db/migration
+REFRESH_TOKEN_DURATION=24h
